hphp/hack/test/typecheck/group_use_needs_semicolon.php.exp
File "group_use_needs_semicolon.php", line 18, characters 51-51:
A semicolon (';') is expected here. (Parsing[1002])
